--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
     sdk: flutter
   scrollable_positioned_list: ^0.1.2
   font_awesome_flutter: ^8.8.1
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.1
+  get_it: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
